--- a/public/edicionPagina.html
+++ b/public/edicionPagina.html
@@ -11,7 +11,7 @@
 	<script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
 	<!-- <script src="js/jquery.js"></script> -->
    <link rel="stylesheet" href="./css/main.css" type="text/css">      <!-- aqui tira errores -->
-
+<link rel="stylesheet" href="css/bootstrap3.min.css">
  <link rel="stylesheet" HREF="./css/style-editor.css" type="text/css">
 
  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous" type="text/css">
@@ -33,97 +33,70 @@
  <link rel="stylesheet" href="./froala/css/plugins/fullscreen.css" type="text/css">
 	<link rel="stylesheet" href="./froala/css/plugins/file.css" type="text/css">
   
+	<style>
+	body{
+		font-size: 15px;
+	}
+	</style>
 </head>
 
 <body>
-	<!-- SideBar -->
-	<section class="full-box cover dashboard-sideBar">
-		<div class="full-box dashboard-sideBar-bg btn-menu-dashboard"></div>
-		<div class="full-box dashboard-sideBar-ct">
-			<!--SideBar Title -->
-			<div class="full-box text-uppercase text-center text-titles dashboard-sideBar-title"> Magento <i
-					class="zmdi zmdi-close btn-menu-dashboard visible-xs"></i>
-			</div>
-			<!-- SideBar User info -->
-			<div class="full-box dashboard-sideBar-UserInfo">
-				<figure class="full-box">
-					<img src="./img/team/ac_generico.jpg" alt="UserIcon">
-					<figcaption class="text-center text-titles">User Name</figcaption>
-				</figure>
-				<ul class="full-box list-unstyled text-center">
-					<li>
-						<a href="#!">
-							<i class="zmdi zmdi-settings"></i>
-						</a>
-					</li>
-					<li>
-						<a href="#!" class="btn-exit-system">
-							<i class="zmdi zmdi-power"></i>
-						</a>
-					</li>
-				</ul>
-			</div>
-			<!-- SideBar Menu -->
-			<ul class="list-unstyled full-box dashboard-sideBar-Menu">
-				<li>
-					<a href="home.html">
-						<i class="zmdi zmdi-view-dashboard zmdi-hc-fw"></i> Menu principal </a>
-				</li>
-				<li>
-					<a href="period.html" class="btn-sideBar-SubMenu">
-						<i class="zmdi zmdi-case zmdi-hc-fw"></i> Subir archivos
-						<!-- <i class="zmdi zmdi-caret-down pull-right"></i> -->
-					</a>
-				</li>
-				<li>
-					<a href="#!" class="btn-sideBar-SubMenu">
-						<i class="zmdi zmdi-account-add zmdi-hc-fw"></i> Users <i
-							class="zmdi zmdi-caret-down pull-right"></i>
-					</a>
-					<ul class="list-unstyled full-box">
-						<li>
-							<a href="admin.html"><i class="zmdi zmdi-account zmdi-hc-fw"></i> IMAGENES</a>
-						</li>
-						<li>
-							<a href="teacher.html"><i class="zmdi zmdi-male-alt zmdi-hc-fw"></i> Teacher</a>
-						</li>
-						<li>
-							<a href="student.html"><i class="zmdi zmdi-face zmdi-hc-fw"></i> Student</a>
-						</li>
-						<li>
-							<a href="representative.html"><i class="zmdi zmdi-male-female zmdi-hc-fw"></i>
-								Representative</a>
-						</li>
-					</ul>
-				</li>
-				<li>
-					<a href="#!" class="btn-sideBar-SubMenu">
-						<i class="zmdi zmdi-card zmdi-hc-fw"></i> Payments <i
-							class="zmdi zmdi-caret-down pull-right"></i>
-					</a>
-					<ul class="list-unstyled full-box">
-						<li>
-							<a href="registration.html"><i class="zmdi zmdi-money-box zmdi-hc-fw"></i> Registration</a>
-						</li>
-						<li>
-							<a href="payments.html"><i class="zmdi zmdi-money zmdi-hc-fw"></i> Payments</a>
-						</li>
-					</ul>
-				</li>
-				<li>
-					<a href="#!" class="btn-sideBar-SubMenu">
-						<i class="zmdi zmdi-shield-security zmdi-hc-fw"></i> Settings School <i
-							class="zmdi zmdi-caret-down pull-right"></i>
-					</a>
-					<ul class="list-unstyled full-box">
-						<li>
-							<a href="school.html"><i class="zmdi zmdi-balance zmdi-hc-fw"></i> School Data</a>
-						</li>
-					</ul>
-				</li>
-			</ul>
-		</div>
-	</section>
+ <!-- SideBar -->
+ <section class="full-box cover dashboard-sideBar">
+        <div class="full-box dashboard-sideBar-bg btn-menu-dashboard"></div>
+        <div class="full-box dashboard-sideBar-ct">
+            <!--SideBar Title -->
+            <div class="full-box text-uppercase text-center text-titles dashboard-sideBar-title"> Magento <i
+                    class="zmdi zmdi-close btn-menu-dashboard visible-xs"></i>
+            </div>
+            <!-- SideBar User info -->
+            <div class="full-box dashboard-sideBar-UserInfo">
+                <figure class="full-box">
+                    <img src="./img/team/ac_generico.jpg" alt="UserIcon" />
+                    <figcaption class="text-center text-titles">User Name</figcaption>
+                </figure>
+                <ul class="full-box list-unstyled text-center">
+                    <li>
+                        <a href="#!">
+                            <i class="zmdi zmdi-settings"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#!" class="btn-exit-system">
+                            <i class="zmdi zmdi-power"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <!-- SideBar Menu -->
+            <ul class="list-unstyled full-box dashboard-sideBar-Menu">
+                <li>
+                    <a href="home.html">
+                        <i class="zmdi zmdi-view-dashboard zmdi-hc-fw"></i> Menu principal </a>
+                </li>
+                <li>
+                    <a href="./elegirArchivo.html" class="btn-sideBar-SubMenu" style="padding-top:1px">
+                        <i class="zmdi zmdi-case zmdi-hc-fw"></i> imagenes, videos y archivos 
+                        <!-- <i class="zmdi zmdi-caret-down pull-right"></i> -->
+                    </a>
+   
+                </li>
+                <li>
+                    <a href="./edicionPagina.html" class="btn-sideBar-SubMenu">
+                        <i class="zmdi zmdi-account-add zmdi-hc-fw"></i> Administrar pagina principal
+                    </a>
+
+                </li>
+                <li>
+                    <a href="eleccionPagina.html" class="btn-sideBar-SubMenu">
+                        <i class="zmdi zmdi-card zmdi-hc-fw"></i> creación de páginas 
+                    </a>
+     
+                </li>
+
+            </ul>
+        </div>
+    </section>
 	<!-- Content page-->
 	<section class="full-box dashboard-contentPage">
 		<!-- NavBar -->
@@ -155,7 +128,7 @@
 		
 			<div class="row full-box text-center" style="padding: 30px 10px">
 
-					<div class="col-lg-9 col-xl-9">
+					<div class="col-lg-8 col-xl-8">
 							<div class="card">
 									<form autocomplete="off" style=" background: #ECE9E6; background: -webkit-linear-gradient(to top, #FFFFFF, #ECE9E6); background: linear-gradient(to top, #FFFFFF, #ECE9E6);">
 													   <!-- <div class="row full-box text-center" style="padding: 30px 10px;">
@@ -248,7 +221,7 @@
 						
 						</div>
 		
-			<div class="col-lg-3 col-xl-3">
+			<div class="col-lg-4 col-xl-4">
 				<div class="card">
 					<div class="card-header bg-dark">
 					  <h3 class="card-title text-white">
