--- a/public/perfilArchivo.html
+++ b/public/perfilArchivo.html
@@ -48,8 +48,8 @@
 </head>
 
 <body>
-    <!-- SideBar -->
-    <section class="full-box cover dashboard-sideBar">
+ <!-- SideBar -->
+ <section class="full-box cover dashboard-sideBar">
         <div class="full-box dashboard-sideBar-bg btn-menu-dashboard"></div>
         <div class="full-box dashboard-sideBar-ct">
             <!--SideBar Title -->
@@ -79,74 +79,28 @@
             <ul class="list-unstyled full-box dashboard-sideBar-Menu">
                 <li>
                     <a href="home.html">
-                        <i class="zmdi zmdi-view-dashboard zmdi-hc-fw"></i> Dashboard </a>
+                        <i class="zmdi zmdi-view-dashboard zmdi-hc-fw"></i> Menu principal </a>
                 </li>
                 <li>
-                    <a href="#!" class="btn-sideBar-SubMenu">
-                        <i class="zmdi zmdi-case zmdi-hc-fw"></i> Subir archivos
+                    <a href="./elegirArchivo.html" class="btn-sideBar-SubMenu" style="padding-top:1px">
+                        <i class="zmdi zmdi-case zmdi-hc-fw"></i> imagenes, videos y archivos 
                         <!-- <i class="zmdi zmdi-caret-down pull-right"></i> -->
                     </a>
-                    <ul class="list-unstyled full-box">
-                        <li>
-                            <a href="period.html"><i class="zmdi zmdi-timer zmdi-hc-fw"></i> Period</a>
-                        </li>
-                        <li>
-                            <a href="subject.html"><i class="zmdi zmdi-book zmdi-hc-fw"></i> Subject</a>
-                        </li>
-                        <li>
-                            <a href="section.html"><i class="zmdi zmdi-graduation-cap zmdi-hc-fw"></i> Section</a>
-                        </li>
-                        <li>
-                            <a href="salon.html"><i class="zmdi zmdi-font zmdi-hc-fw"></i> Salon</a>
-                        </li>
-                    </ul>
+   
                 </li>
                 <li>
-                    <a href="#!" class="btn-sideBar-SubMenu">
-                        <i class="zmdi zmdi-account-add zmdi-hc-fw"></i> Users <i
-                            class="zmdi zmdi-caret-down pull-right"></i>
+                    <a href="./edicionPagina.html" class="btn-sideBar-SubMenu">
+                        <i class="zmdi zmdi-account-add zmdi-hc-fw"></i> Administrar pagina principal
                     </a>
-                    <ul class="list-unstyled full-box">
-                        <li>
-                            <a href="admin.html"><i class="zmdi zmdi-account zmdi-hc-fw"></i> Admin</a>
-                        </li>
-                        <li>
-                            <a href="teacher.html"><i class="zmdi zmdi-male-alt zmdi-hc-fw"></i> Teacher</a>
-                        </li>
-                        <li>
-                            <a href="student.html"><i class="zmdi zmdi-face zmdi-hc-fw"></i> Student</a>
-                        </li>
-                        <li>
-                            <a href="representative.html"><i class="zmdi zmdi-male-female zmdi-hc-fw"></i>
-                                Representative</a>
-                        </li>
-                    </ul>
+
                 </li>
                 <li>
-                    <a href="#!" class="btn-sideBar-SubMenu">
-                        <i class="zmdi zmdi-card zmdi-hc-fw"></i> Payments <i
-                            class="zmdi zmdi-caret-down pull-right"></i>
+                    <a href="eleccionPagina.html" class="btn-sideBar-SubMenu">
+                        <i class="zmdi zmdi-card zmdi-hc-fw"></i> creación de páginas 
                     </a>
-                    <ul class="list-unstyled full-box">
-                        <li>
-                            <a href="registration.html"><i class="zmdi zmdi-money-box zmdi-hc-fw"></i> Registration</a>
-                        </li>
-                        <li>
-                            <a href="payments.html"><i class="zmdi zmdi-money zmdi-hc-fw"></i> Payments</a>
-                        </li>
-                    </ul>
+     
                 </li>
-                <li>
-                    <a href="#!" class="btn-sideBar-SubMenu">
-                        <i class="zmdi zmdi-shield-security zmdi-hc-fw"></i> Settings School <i
-                            class="zmdi zmdi-caret-down pull-right"></i>
-                    </a>
-                    <ul class="list-unstyled full-box">
-                        <li>
-                            <a href="school.html"><i class="zmdi zmdi-balance zmdi-hc-fw"></i> School Data</a>
-                        </li>
-                    </ul>
-                </li>
+
             </ul>
         </div>
     </section>
